--- a/src/css/newbill.css
+++ b/src/css/newbill.css
@@ -61,3 +61,9 @@ textarea:focus, input:focus, select:focus {
 *[placeholder] {
   color: #0E5AE5 !important;
 }
+
+.error-msg {
+  color: red;
+  font-weight: 600;
+  font-size: 12px;
+}
